  . Fixed bug #78989 (Delayed variance check involving trait segfaults).
    (Nikita)
  . Fixed bug #79174 (cookie values with spaces fail to round-trip). (cmb)
  . Fixed bug #76047 (Use-after-free when accessing already destructed
    backtrace arguments). (Nikita)

- CURL:
  . Fixed bug #79078 (Hypothetical use-after-free in curl_multi_add_handle()).
    (cmb)

- FFI:
  . Fixed bug #79096 (FFI Struct Segfault). (cmb)

- IMAP:
  . Fixed bug #79112 (IMAP extension can't find OpenSSL libraries at configure
    time). (Nikita)

 -Intl:
  . Fixed bug #79212 (NumberFormatter::format() may detect wrong type). (cmb)

- Libxml:
  . Fixed bug #79191 (Error in SoapClient ctor disables DOMDocument::save()).
    (Nikita, cmb)

- MBString:
  . Fixed bug #79149 (SEGV in mb_convert_encoding with non-string encodings).
    (cmb)

- MySQLi:
  . Fixed bug #78666 (Properties may emit a warning on var_dump()). (kocsismate)

- MySQLnd:
  . Fixed bug #79084 (mysqlnd may fetch wrong column indexes with MYSQLI_BOTH).
    (cmb)
  . Fixed bug #79011 (MySQL caching_sha2_password Access denied for password
    with more than 20 chars). (Nikita)

- Opcache:
  . Fixed bug #79114 (Eval class during preload causes class to be only half
    available). (Laruence)
  . Fixed bug #79128 (Preloading segfaults if preload_user is used). (Nikita)
  . Fixed bug #79193 (Incorrect type inference for self::$field =& $field).
    (Nikita)

- OpenSSL:
  . Fixed bug #79145 (openssl memory leak). (cmb, Nikita)

- Phar:
  . Fixed bug #76584 (PharFileInfo::decompress not working). (cmb)

- Reflection:
  . Fixed bug #79115 (ReflectionClass::isCloneable call reflected class
    __destruct). (Nikita)

- Standard:
  . Fixed bug #78902 (Memory leak when using stream_filter_append). (liudaixiao)
  . Fixed bug #78969 (PASSWORD_DEFAULT should match PASSWORD_BCRYPT instead of being null). (kocsismate)

- Testing:
  . Fixed bug #78090 (bug45161.phpt takes forever to finish). (cmb)

- XSL: